--- a/schedule-webinars/pom.xml
+++ b/schedule-webinars/pom.xml
@@ -24,6 +24,18 @@
        <artifactId>UIElements</artifactId>
        <version>0.0.1-SNAPSHOT</version>
     </dependency>
+	<dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>2.49.0</version>
+    </dependency> 
+	<dependency>
+	<groupId>au.com.bytecode</groupId>
+	<artifactId>opencsv</artifactId>
+	<version>2.4</version>
+</dependency>
+
+
    </dependencies>
  <build> 
     <resources>
